# ffmpeg-build

./: .gitmodules  build_ffmpeg.sh  build_ffmpeg_dep.sh
app/: .gitignore  CMakeLists.txt  build.sh
app/src/: ffmpeg_inc.h  main.cpp  stdafx.h
ffmpeg_bin/: .gitignore
ffmpeg_build/: .gitignore
